--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </header>
     <main>
       <p>Because the basics are important!</p>
+      <section>
       <p>
         Learn more about Git in the
         <a href="https://git-scm.com/book/en/v2">official docs</a> or
         <a href="https://acad.link/git">our course</a>.
+        <a href="https://www.google.com/">On it</a>.
       </p>
+    </section>
     </main>
   </body>
 </html>
